--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="dark_mode">Темная тема</string>
     <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name= "email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
-    <string name="my_email">"ryuko.matoy.99@bk.ru"</string>
-    <string name="share_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
-    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="my_email" translatable="false">"ryuko.matoy.99@bk.ru"</string>
+    <string name="share_url" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
+    <string name="terms_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
     <string name="share_title">Поделиться приложением</string>
 
 </resources>
