--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,10 @@
     <string name="genre_name">Жанр</string>
     <string name="country">Страна</string>
     <string name="space" />
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="no_playlists_text">Вы не создали \nни одного плейлиста</string>
+    <string name="no_favorites">Ваша медиатека пуста</string>
+    <string name="playlists">Плейлисты</string>
+    <string name="favorites">Избранные треки</string>
 
 </resources>
