--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,20 @@
     <string name="no_favorites">Ваша медиатека пуста</string>
     <string name="playlists">Плейлисты</string>
     <string name="favorites">Избранные треки</string>
+    <string name="new_playlist_header">Новый плейлист</string>
+    <string name="playlist_name">Название*</string>
+    <string name="playlist_description">Описание</string>
+    <string name="playlist_create">Создать</string>
+    <string name="creating_playlist_back">Завершить создание плейлиста?</string>
+    <string name="creating_playlist_loss_data">Все несохраненные данные будут потеряны</string>
+    <string name="cancel">Отмена</string>
+    <string name="finish">Завершить</string>
+    <string name="track_added">Добавлено в плейлист</string>
+    <string name="track_already_in_playlist">Трек уже добавлен в плейлист</string>
+
+    <string name="track_count_5">треков</string>
+    <string name="track_count_1">трек</string>
+    <string name="track_count_2_4">трека</string>
+    <string name="add_to_playlist_string">Добавить в плейлист</string>
 
 </resources>
